--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,6 @@ img {
 }
 
 .main-program {
-  background-color: rgba(0, 0, 0, 0);
   border-image: url("/images/background-images/main-program.jpg");
   background-repeat: no-repeat;
   background-position: center top;
@@ -197,7 +196,7 @@ img {
   overflow: auto;
   padding-top: 60px;
   padding-bottom: 80px;
-  border-radius: 0 0 0 60px;
+  border-radius: 0 0 0 8px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
